# b2bapps

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  UI-KIT.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.md  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.test.ts  App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/android-templates/: MainActivity.kt  SafeAreaPlugin.kt
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: main.css
src/components/customers/: CustomerDetailSheet.vue  CustomerListItem.vue  InfoRow.vue  OrderDetailSheet.vue  OrderItemCard.vue  index.ts
src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue  BottomNavItem.vue  SidebarItem.vue
src/composables/: useCustomerCache.test.ts  useCustomerCache.ts  useFormatters.test.ts  useFormatters.ts  useSafeArea.test.ts  useSafeArea.ts
src/constants/: customers.ts  ui.ts
src/router/: index.test.ts  index.ts
src/services/: api.ts  db.test.ts  db.ts
src/stores/: auth.test.ts  auth.ts  cart.test.ts  cart.ts  category.test.ts  category.ts  customer.test.ts  customer.ts  offline.test.ts  offline.ts  products.test.ts  products.ts
src/types/: index.ts
src/utils/: error.test.ts  error.ts  logger.test.ts  logger.ts  platform.ts
src/views/: BarcodeAssignmentView.vue  CustomersView.vue  LoginView.test.ts  LoginView.vue  OrderDetailView.vue  OrdersView.test.ts  OrdersView.vue  PosView.vue  TenantView.test.ts  TenantView.vue
(+39 files in other folders)
